add cname 统计 git配置

--- a/themes/apollo/layout/partial/copyright.jade
+++ b/themes/apollo/layout/partial/copyright.jade
@@ -3,3 +3,5 @@
     - var year = currentDate.getFullYear();
     - year = year == theme.startyear ? year : theme.startyear + ' - ' + year;
     p © #{year} #[a(href=config.url)!= config.author] | Power By Hexo.
+    p#busuanzi_container_site_uv view <span id='busuanzi_value_site_uv'></span> times
+   
