--- a/themes/apollo/layout/partial/scripts.jade
+++ b/themes/apollo/layout/partial/scripts.jade
@@ -1,5 +1,6 @@
 //- LaTex
 script(async src="//cdn.bootcss.com/mathjax/2.6.1/MathJax.js?config=TeX-MML-AM_CHTML")
+script(async src="https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js")
 
 //- Analytics tracking
 - var ga = theme.ga
